2025CR599	7/21/2025	MikeR	Bug	Update to Payara server 6.2025.7, be sure to use latest domain.xml and p12 files.
2025CR594	7/19/2025	MikeR	Bug	Need a flag to omit grammar/writing/mechanics from Essay and File Upload AI analysis.
2025CR595	7/20/2025	MikeR	Bug	Remove Discern from score